<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="googlePixel2Xl6VM" type="com.finalytics.app.modules.googlepixel2xl6.data.viewmodel.GooglePixel2Xl6VM"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_900">
        <androidx.appcompat.widget.AppCompatButton
            android:gravity="center" android:id="@+id/btnPaytm"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_85pxh"
            android:layout_marginStart="@dimen/_85pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:text="@string/lbl_paytm" android:textAllCaps="false"
            style="@style/btnSolidRounded_10" tools:text="@string/lbl_paytm"/>
        <TextView android:gravity="center"
            android:id="@+id/txtSwotAnalysisO"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_101pxh"
            android:layout_marginStart="@dimen/_101pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content"
            android:text="@{googlePixel2Xl6VM.googlePixel2Xl6Model.txtSwotAnalysisO}"
            style="@style/txtPublicSanssemibold18" tools:text="@string/msg_swot_analysis_o"/>
        <TextView android:gravity="center"
            android:id="@+id/txtStrengths"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_150pxh"
            android:layout_marginStart="@dimen/_150pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content"
            android:text="@{googlePixel2Xl6VM.googlePixel2Xl6Model.txtStrengths}"
            style="@style/txtPublicSanssemibold18" tools:text="@string/lbl_strengths"/>
        <TextView android:gravity="top|start"
            android:id="@+id/txtWellKnownPay"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_38pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="match_parent"
            android:text="@{googlePixel2Xl6VM.googlePixel2Xl6Model.txtWellKnownPay}"
            style="@style/txtPublicSanssemibold22" tools:text="@string/msg_well_known_pay"/>
        <TextView android:gravity="top|start"
            android:id="@+id/txtInitiatorPayt"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_38pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent"
            android:text="@{googlePixel2Xl6VM.googlePixel2Xl6Model.txtInitiatorPayt}"
            style="@style/txtPublicSanssemibold22" tools:text="@string/msg_initiator_payt"/>
        <TextView android:gravity="top|start"
            android:id="@+id/txtAcceptancePay"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_38pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:text="@{googlePixel2Xl6VM.googlePixel2Xl6Model.txtAcceptancePay}"
            style="@style/txtPublicSanssemibold22_1" tools:text="@string/msg_acceptance_pay"/>
        <TextView android:gravity="top|start"
            android:id="@+id/txtConsumerFriend"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_31pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:text="@{googlePixel2Xl6VM.googlePixel2Xl6Model.txtConsumerFriend}"
            style="@style/txtPublicSanssemibold22_1" tools:text="@string/msg_consumer_friend"/>
        <FrameLayout android:id="@+id/frame"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_29pxv"
            android:layout_marginEnd="@dimen/_46pxh"
            android:layout_marginStart="@dimen/_46pxh"
            android:layout_marginTop="@dimen/_41pxv" android:layout_width="match_parent">
            <ImageView android:clickable="true" android:gravity="center"
                android:id="@+id/image" android:layout_gravity="center"
                android:layout_height="@dimen/_53pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY" android:src="@drawable/img_rectangle_6_3"/>
            <TextView android:gravity="center"
                android:id="@+id/txtContinue"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="wrap_content"
                android:text="@{googlePixel2Xl6VM.googlePixel2Xl6Model.txtContinue}"
                style="@style/txtPublicSansbold18" tools:text="@string/lbl_continue"/>
        </FrameLayout>
    </LinearLayout>
</layout>
