<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="googlePixel2Xl10VM" type="com.finalytics.app.modules.googlepixel2xl10.data.viewmodel.GooglePixel2Xl10VM"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_900">
        <androidx.appcompat.widget.AppCompatButton
            android:gravity="center" android:id="@+id/btnPhonepe2"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_85pxh"
            android:layout_marginStart="@dimen/_85pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="match_parent"
            android:text="@string/lbl_phonepe2"
            android:textAllCaps="false"
            style="@style/btnSolidRounded_10" tools:text="@string/lbl_phonepe2"/>
        <TextView android:gravity="center"
            android:id="@+id/txtSwotAnalysisO"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_101pxh"
            android:layout_marginStart="@dimen/_101pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content"
            android:text="@{googlePixel2Xl10VM.googlePixel2Xl10Model.txtSwotAnalysisO}"
            style="@style/txtPublicSanssemibold18" tools:text="@string/msg_swot_analysis_o"/>
        <TextView android:gravity="center"
            android:id="@+id/txtStrengths"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_150pxh"
            android:layout_marginStart="@dimen/_150pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content"
            android:text="@{googlePixel2Xl10VM.googlePixel2Xl10Model.txtStrengths}"
            style="@style/txtPublicSanssemibold18" tools:text="@string/lbl_strengths"/>
        <TextView android:gravity="top|start"
            android:id="@+id/txtPhonepeIsARb"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_38pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="match_parent"
            android:text="@{googlePixel2Xl10VM.googlePixel2Xl10Model.txtPhonepeIsARb}"
            style="@style/txtPublicSanssemibold22" tools:text="@string/msg_phonepe_is_a_rb"/>
        <TextView android:gravity="top|start"
            android:id="@+id/txtInJuneAbout"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_38pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:text="@{googlePixel2Xl10VM.googlePixel2Xl10Model.txtInJuneAbout}"
            style="@style/txtPublicSanssemibold22" tools:text="@string/msg_in_june_about"/>
        <TextView android:gravity="top|start"
            android:id="@+id/txtSafeAndSecure"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:text="@{googlePixel2Xl10VM.googlePixel2Xl10Model.txtSafeAndSecure}"
            style="@style/txtPublicSanssemibold22_1" tools:text="@string/msg_safe_and_secure"/>
        <FrameLayout android:id="@+id/frame"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_46pxh"
            android:layout_marginStart="@dimen/_46pxh"
            android:layout_marginTop="@dimen/_42pxv" android:layout_width="match_parent">
            <ImageView android:clickable="true" android:gravity="center"
                android:id="@+id/image" android:layout_gravity="center"
                android:layout_height="@dimen/_54pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY" android:src="@drawable/img_rectangle_6_4"/>
            <TextView android:gravity="center"
                android:id="@+id/txtContinue"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="wrap_content"
                android:text="@{googlePixel2Xl10VM.googlePixel2Xl10Model.txtContinue}"
                style="@style/txtPublicSansbold18" tools:text="@string/lbl_continue"/>
        </FrameLayout>
    </LinearLayout>
</layout>
